# 6510_Emulator

./: .gitignore  CMakeLists.txt  cpu.c  cpu.h  main.c  memory.c  memory.h
opcodes/: generate_opinfo.py
testing/: AllSuiteA.rom  dectest_add.asm  dectest_sub.asm  nestest.log.ref  rom_gen.py
